[UPDATE] Update order vat amount and episode description